[gd_scene load_steps=3 format=3 uid="uid://c2x5rto73hpe1"]

[ext_resource type="Texture2D" uid="uid://dfth5p8xpsgmy" path="res://assets/icons/success.svg" id="1"]
[ext_resource type="Script" path="res://scenes/popups/first_time/EmulatorInfoSection.gd" id="2"]

[node name="EmulatorInfoSection" type="VBoxContainer"]
offset_top = 24.0
offset_right = 892.0
offset_bottom = 170.0
theme_override_constants/separation = 10
script = ExtResource("2")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3

[node name="Found" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FoundIcon" type="TextureRect" parent="Found"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1")
expand_mode = 1

[node name="FoundLabel" type="Label" parent="Found"]
unique_name_in_owner = true
layout_mode = 2
text = "Found:"

[node name="FoundDetails" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Found details"
autowrap_mode = 3
